--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,14 @@
 .dice rect {
     fill: rgb(89, 89, 255);
 }
+
+.dice .dot{
+    fill: white;
+    transition: all 0.3s;
+    transform-origin: center;
+}
+
+.dice:hover .dot{
+    transform: scale(1.1);
+    fill:rgb(161, 161, 202)
+}
